--- a/rob.html
+++ b/rob.html
@@ -15,6 +15,6 @@
 
   <div id="board-canvas"></div>
 
-  <script src="/static/sketch.js"></script>
+  <script src="rob.js"></script>
 </body>
 </html>
