--- a/rob.html
+++ b/rob.html
@@ -1,47 +1,32 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Chess AI</title>
-  <link rel="stylesheet" href="/static/style.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+  <title>Ajedrez AI</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background-color: #f0f0f0;
-    }
-
     #board-canvas {
-      margin: 20px auto;
       width: 480px;
       height: 480px;
-      border: 2px solid black;
+      margin: 20px auto;
     }
-
-    #controls {
-      margin-top: 20px;
+    canvas {
+      border: 2px solid #333;
     }
-
     button {
-      padding: 10px 15px;
       margin: 5px;
-      font-size: 16px;
     }
   </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 </head>
 <body>
-
-  <h1>Chess AI</h1>
-
-  <div id="controls">
+  <div style="text-align:center">
     <button onclick="chooseColor('white')">Jugar con Blancas</button>
     <button onclick="chooseColor('black')">Jugar con Negras</button>
     <button onclick="restartGame()">Reiniciar Juego</button>
   </div>
-
   <div id="board-canvas"></div>
 
-  <script src="rob.js"></script>
+  <script src="/static/rob.js"></script>
 </body>
 </html>
+
