--- a/rob.html
+++ b/rob.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Ajedrez AI</title>
+  <title>Ajedrez con AI</title>
   <style>
     #board-canvas {
-      width: 480px;
-      height: 480px;
-      margin: 20px auto;
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
     }
     canvas {
-      border: 2px solid #333;
+      border: 2px solid black;
     }
-    button {
-      margin: 5px;
+    #controls {
+      text-align: center;
+      margin-top: 20px;
     }
   </style>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
 </head>
 <body>
-  <div style="text-align:center">
+  <div id="controls">
     <button onclick="chooseColor('white')">Jugar con Blancas</button>
     <button onclick="chooseColor('black')">Jugar con Negras</button>
     <button onclick="restartGame()">Reiniciar Juego</button>
   </div>
   <div id="board-canvas"></div>
-
-  <script src="/static/rob.js"></script>
+  <script src="rob.js"></script>
 </body>
 </html>
-
