--- a/red-neuronal.html
+++ b/red-neuronal.html
@@ -250,8 +250,8 @@
     </style>
 
     <div id="instructions-container" class="ui-panel">
-        <div id="instruction-title">Interactive Neural Network</div>
-        <div>Click or tap to create energy pulses through the network. Drag to rotate.</div>
+        <div id="instruction-title">Redes neuronales proyecto interactivo </div>
+        <div>Nosotros tenemos que hacer tareas repetitivas para poder aprender algo de forma asertiva, tomamos informacion de muchas fuentes , libros experiencias vividas, cometiendo errores etc, de esa misma forma es como entrenamos a las redes neuronales pasan la informacion de un lado a otro , se hace comparaciones , analisis para determinar cual sera la probabilidad con menos errores y transformarla en un resultado</div>
         </div>
 
     <div id="theme-selector" class="ui-panel">
