--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <title>Soluciones Tecnológicas</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sketchy, But Keeps Spinning</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js" defer></script>
+  <script src="sketch.js?v=<?php echo time(); ?>" defer></script>
   <style>
     /* --- CSS combinado --- */
     ::-webkit-scrollbar { width: 0.625rem; height: 0.625rem; }
