--- a/raspberry.html
+++ b/raspberry.html
@@ -58,9 +58,11 @@
       document.getElementById('command').value = "";
 
       try {
-        const res = await fetch('/raspberry/enviar', {
+        const res = await fetch('http://192.168.1.10:5000/raspberry/enviar', {
           method: 'POST',
-          headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+          headers: {
+            'Content-Type': 'application/x-www-form-urlencoded'
+          },
           body: `comando=${encodeURIComponent(cmd)}`
         });
 
@@ -74,3 +76,4 @@
   </script>
 </body>
 </html>
+
