--- a/raspberry.html
+++ b/raspberry.html
@@ -58,7 +58,9 @@
       document.getElementById('command').value = "";
 
       try {
-        const res = await fetch('http://192.168.1.10:5001/raspberry/enviar', {
+    
+        const res = await fetch('https://tender-lions-stay.loca.lt/raspberry/enviar', {
+
           method: 'POST',
           headers: {
             'Content-Type': 'application/x-www-form-urlencoded'
