--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       const formData = new FormData();
       formData.append('file', fileInput.files[0]);
 
-      fetch('https://miweb-mj38.onrender.com/upload', {
+      fetch('https://miweb-mj38.onrender.com/uploads', {
         method: 'POST',
         body: formData
       })
