--- a/index.html
+++ b/index.html
@@ -4,25 +4,15 @@
   <meta charset="UTF-8" />
   <title>Soluciones Tecnológicas</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' https://miweb-mj38.onrender.com;">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js" defer></script>
-  <script src="sketch.js?v=1" defer></script>
-  <!-- Increment v=1 to v=2, etc., when updating sketch.js to bust cache -->
+  <script src="sketch.js?v=<?php echo time(); ?>" defer></script>
 
   <style>
     body, html {
       margin: 0;
       padding: 0;
-      overflow: auto; /* Changed from hidden to allow scrolling if needed */
+      overflow: hidden;
       font-family: sans-serif;
-    }
-
-    /* Ensure p5.js canvas is visible */
-    canvas {
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 1; /* Below form and GitHub link */
     }
 
     #uploadForm {
@@ -143,33 +133,19 @@
 
       const formData = new FormData();
       formData.append('file', fileInput.files[0]);
-      console.log('FormData:', [...formData.entries()]);
 
       fetch('https://miweb-mj38.onrender.com/upload', {
         method: 'POST',
-        body: formData,
-        mode: 'cors'
+        body: formData
       })
-      .then(response => {
-        console.log('Response Status:', response.status);
-        console.log('Response Headers:', [...response.headers.entries()]);
-        if (!response.ok) {
-          throw new Error(`HTTP error! Status: ${response.status}`);
-        }
-        return response.json();
-      })
+      .then(response => response.text())
       .then(data => {
-        console.log('Response Data:', data);
-        if (data.success) {
-          alert("✅ Archivo subido exitosamente.");
-          location.reload();
-        } else {
-          alert(`Error: ${data.message}`);
-        }
+        alert("✅ Archivo subido exitosamente.");
+        location.reload(); // mejor práctica que modificar todo el body
       })
       .catch(error => {
-        console.error('Fetch Error:', error);
-        alert("Hubo un error al subir el archivo: " + error.message);
+        console.error('Error:', error);
+        alert("Hubo un error al subir el archivo.");
       });
     });
   </script>
